syntax = "proto3";

package slash.store;

import "store/common.proto";

option go_package = "gen/store";

message Memo {
  int32 id = 1;

  int32 creator_id = 2;

  int64 created_ts = 3;

  int64 updated_ts = 4;

  RowStatus row_status = 5;

  string name = 6;

  string title = 7;

  string content = 8;

  repeated string tags = 9;

  Visibility visibility = 10;
}
